--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,14 @@
     <title>Home</title>
 </head>
 <body>
-    <p>You are Home</p>
+
+   <h4>Products</h4>
+
+    {% for item in items %}
+    
+    {{ item.title }} | {{ item.price }}
+    
+    {% endfor %}
+
 </body>
 </html>
