--- a/templates/home.html
+++ b/templates/home.html
@@ -12,14 +12,15 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                        <img class="card-img-top p-2" src="{{item.image.url}}" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
                                 <h5 class="fw-bolder">{{ item.title }}</h5>
                                 <!-- Product price-->
-                                {{ item.price }}
+                                € {{ item.price }}
+                               <p> {{ item.get_category_display }} </p>
                             </div>
                         </div>
                         <!-- Product actions-->
