--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>{% block title %} {% endblock title %}</title>
+
         <!-- Favicon
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         Bootstrap icons-->
@@ -44,7 +45,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Header-->
+        <!-- Header
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
@@ -52,7 +53,7 @@
                     <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
                 </div>
             </div>
-        </header>
+        </header>-->
         
         {% block content %}
         
@@ -65,7 +66,7 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <!-- Core theme JS
+        <script src="js/scripts.js"></script>-->
     </body>
 </html>
