--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
                 {% for item in items %}
                 <div class="col mb-5">
-                    <div class="card h-100">
+                    <div class="card shadow h-100">
                         <!-- Product image-->
                         <img class="card-img-top p-2" src="{{item.image.url}}" alt="..." />
                         <!-- Product details-->
@@ -18,9 +18,16 @@
                             <div class="text-center">
                                 <!-- Product name-->
                                 <h5 class="fw-bolder">{{ item.title }}</h5>
+
                                 <!-- Product price-->
-                                € {{ item.price }}
-                               <p> {{ item.get_category_display }} </p>
+                                {% if item.discount_price %}
+                                <p><del class="mt-2 text-danger">€{{ item.price }}</del>
+                                    €{{ item.discount_price }}</p>   
+                                {% else %}
+                                <p>€{{ item.price }}</p>
+                                {% endif %}
+                             
+                               <p class="btn btn-success btn-sm"> {{ item.get_category_display }} </p>
                             </div>
                         </div>
                         <!-- Product actions-->
