class based views & product details

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-    {% block title %} Ecom | Home {% endblock title %}
+    {% block title %} Ecom | {{ object.title }} {% endblock title %}
 
     {% block content %} 
     
@@ -8,11 +8,10 @@
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
 
-                {% for item in object_list %}
                 <div class="col mb-5">
                     <div class="card shadow h-100">
                         <!-- Product image-->
-                        <img class="card-img-top p-2" src="{{item.image.url}}" alt="..." />
+                        <img class="card-img-top p-2" src="{{object.image.url}}" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -38,7 +37,7 @@
                         </div>
                     </div>
                 </div>
-                {% endfor %}
+               
             </div>
         </div>
     </section>
